# arxiv-cli

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  README_MODIFICATIONS.md  go.mod  package.json  pre-install.js  start.js  uninstall.js
.github/workflows/: build-go.yaml  build.yaml  lint-go.yaml  publish-go.yml  publish.yaml  test-go.yaml  test.yaml
cmd/arxiv-cli/: main.go
internal/download/: download.go  download_test.go
scripts/: version_bump.py
src/: download.rs  main.rs
