[package]
name = "arxiv-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arxiv-rs = "0.2.0"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serial_test = "3.3.1"
tokio = { version = "1.49.0", features = ["full"] }
